--- a/fr v2/css/cv.css
+++ b/fr v2/css/cv.css
@@ -15,16 +15,16 @@ header {
     margin: 0%;
 }
 
-header .header-right {
+#header-right {
 float : right;
 margin-right : 2%;
 }
 
-header section {
+header div {
 float : right;
 }
 
-section h2 {
+header div h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
@@ -32,19 +32,19 @@ font-size: 100%;
 color: #304D90;
 }
 
-header .header-left {
+#header-left {
 margin : auto;
 width: 70%;
 height: 62%;
 }
 
 /** QUOTE HEADER **/ 
-section blockquote h1:first-letter {
+header div blockquote h1:first-letter {
     background:url("../icon/left_gui2.png") no-repeat left top;
 	padding-left:25px;
 }
 
-section blockquote {    
+header div blockquote {    
 	background:url("../icon/right_gui2.png") no-repeat right bottom;
     text-align:justify;
 	float: right;
@@ -146,28 +146,25 @@ nav {
 	/**padding-top: 2%;**/
 }
 
-#menu/**, #menu ul**/ {
+nav ul {
 text-align : center;
-list-style: none;
+list-style: none outside none;
 width: 70%;
 margin: auto;
 height:100%;
-padding:0;
 }
 
-#menu li {
-display:inline-block;
-position:relative;
-width: 14%; 
+nav li {
+width: 14%;
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
 height: 100%;
-
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
+    /**height: 45px;**/
 	padding-top: 8%;
     vertical-align: middle;
 	width: 14%;
@@ -183,6 +180,9 @@ nav  li:nth-child(2) {
 	background: none repeat scroll 0% 0%;
 	background-color : #6DC0FE;
 }
+nav  li:nth-child(2) a {
+	text-decoration: underline;
+}
 nav  li:nth-child(3) {
 	background: none repeat scroll 0% 0%;
 	background-color : #43ADFE;
@@ -197,146 +197,78 @@ nav li:nth-child(5) {
 	background-color : #0190FE;
 }
 
-/** SOUS-MENU **/
-#menu ul li{
-display:inherit;
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-width: 100%; 
-height: 30%;
-}
-#menu ul li:hover{
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-}
-#menu ul li:last-child{
--webkit-border-radius:0 0 8px 8px;
-   -moz-border-radius:0 0 8px 8px;
-        border-radius:0 0 8px 8px;
-}
-#menu ul{
-position:absolute;
-max-height:0;
-width:100%;
-overflow:hidden;
-text-align : center;
-list-style: none;
-margin: auto;
--moz-transition: .7s all .2s;
--webkit-transition: .7s all .2s;
--o-transition: .7s all .2s;
--ms-transition: .7s all .2s;
-transition: .7s all .2s;
-}
-
-#menu li:hover ul{
-max-height:15em;
-}
-#menu ul a{
-padding:6px 0;
-}
-#menu li:hover li a{
-color:#fff;
-text-transform:inherit;
-}
-#menu li:hover a, #menu li li:hover a{
-color:#000;
-}
-
-/** CSS pour la création de l'icône du premier fils **/
-#menu ul li:first-child a:after{
-    content: '';
-    position: absolute;
-    left: 25px;
-    top: -6px;
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 8px solid #444;
-}
-
-#menu ul li:first-child a:hover:after{
-    border-bottom-color: #04acec;
-}
-
 
 /** CONTENT HOME **/
 body {
 	background : url("../images/body.png") repeat scroll 0% 0% transparent;
-	margin: 0 auto;
+	margin: 0 auto;	
 }
 
-
-/** CONTENT **/
 .content {
-width: 100%;
-height: 85%;
-padding-top: 2%;
-margin: auto;
-font-family: 'Helvetica Neue';
+margin-right: auto;
+margin-left: auto;
+width: 90%;
+height:100%;
 }
 
-.content h1 {
-	text-align: center;
-	color: #F2A101;
-	font-size: 250%;
-	text-align : center;
-	margin-right: 0%;
-	text-transform: uppercase;
-	
+.content section {
+	width: 100%;
+}
+
+/** SECTION CV **/
+
+#cv ol  li {
+    border: 2px solid #87CBFE;
+	border-radius: 1% 1% 1% 1%;
+	list-style: none outside none;
+	position: relative;
+	width: 30%;
+	height: 70%;
+	margin: 1em 0px;
+	background-color: #F4F4F4;
+}
+
+#cv ol  li:nth-child(1) {
+	float: left;
+    clear: left;
+	left: 5%;
+}
+
+#cv ol  li:nth-child(2) {
+	float: right;
+	clear: right;
+	right: 5%;
 }
 
 .content h2 {
-	text-align: center;
-	color: #F2A101;
-	font-size: 150%;
+text-align: center;
+font-family: 'Helvetica Neue';
+color: #FEEA34;
+font-size: 150%;
+background-color: #87CBFE;
+line-height: 100%;
+}
+
+.content h1 {
+	font-family: 'Helvetica Neue';
+	float : right;
+	width: 90%;
+	font-size: 210%;
+	padding-right: 5%;
+	padding-top: 4%;
 	text-align : center;
-	margin-right: 0%;
-	margin-bottom: 0%;
-	margin-top: 3%;	
-}
-
-.content h3 {
-	color: #304D90;
-	text-align: center;
-	font-style: italic;
-	font-size: 85%;
-}
-
-.content p {
-	padding-top: 1%;
-	padding-bottom: 1%;
-	font-size: 120%;
-	color: #90A0D7;
-	text-align: center;
-	margin-right: 0%;
-}
-
-.content a {
-	color: #2252A5;
-	font-style: bold;
-	font-size: 120%;
-}
-
-/** Soulignement des liens **/
-.content a:hover {
-	text-decoration: none;
-	border-bottom: 1px dashed;
-}
-
-.content strong {
+	margin: auto;
+	display: inline;
 	color: #F2A101;
+	font-weight: bold;
 }
 
-.content ul li {
-	color: #90A0D7;
-	text-align:center;
-	margin-bottom: 1%;
-	list-style: none outside none;
+#vs {
+float:left;
+padding-left: 17%;
+padding-top: 16%;
 }
+
 
 /** DIVERS **/ 
 
