--- a/fr v2/css/futur.css
+++ b/fr v2/css/futur.css
@@ -146,28 +146,25 @@ nav {
 	/**padding-top: 2%;**/
 }
 
-#menu/**, #menu ul**/ {
+nav ul {
 text-align : center;
-list-style: none;
+list-style: none outside none;
 width: 70%;
 margin: auto;
 height:100%;
-padding:0;
 }
 
-#menu li {
-display:inline-block;
-position:relative;
-width: 14%; 
+nav li {
+width: 14%;
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
 height: 100%;
-
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
+    /**height: 45px;**/
 	padding-top: 8%;
     vertical-align: middle;
 	width: 14%;
@@ -192,75 +189,16 @@ nav  li:nth-child(4) {
 	background-color : #219EFE;
 }
 
+nav  li:nth-child(4) a {
+	text-decoration: underline;
+}
+
 nav li:nth-child(5) {
 	background: none repeat scroll 0% 0%;
 	background-color : #0190FE;
 }
 
-/** SOUS-MENU **/
-#menu ul li{
-display:inherit;
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-width: 100%; 
-height: 30%;
-}
-#menu ul li:hover{
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-}
-#menu ul li:last-child{
--webkit-border-radius:0 0 8px 8px;
-   -moz-border-radius:0 0 8px 8px;
-        border-radius:0 0 8px 8px;
-}
-#menu ul{
-position:absolute;
-max-height:0;
-width:100%;
-overflow:hidden;
-text-align : center;
-list-style: none;
-margin: auto;
--moz-transition: .7s all .2s;
--webkit-transition: .7s all .2s;
--o-transition: .7s all .2s;
--ms-transition: .7s all .2s;
-transition: .7s all .2s;
-}
 
-#menu li:hover ul{
-max-height:15em;
-}
-#menu ul a{
-padding:6px 0;
-}
-#menu li:hover li a{
-color:#fff;
-text-transform:inherit;
-}
-#menu li:hover a, #menu li li:hover a{
-color:#000;
-}
-
-/** CSS pour la création de l'icône du premier fils **/
-#menu ul li:first-child a:after{
-    content: '';
-    position: absolute;
-    left: 25px;
-    top: -6px;
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 8px solid #444;
-}
-
-#menu ul li:first-child a:hover:after{
-    border-bottom-color: #04acec;
-}
 
 
 /** CONTENT HOME **/
@@ -272,9 +210,9 @@ body {
 
 /** CONTENT **/
 .content {
-width: 100%;
-height: 85%;
-padding-top: 2%;
+width: 80%;
+height: 105%;
+padding-top: 4%;
 margin: auto;
 font-family: 'Helvetica Neue';
 }
@@ -282,61 +220,57 @@ font-family: 'Helvetica Neue';
 .content h1 {
 	text-align: center;
 	color: #F2A101;
-	font-size: 250%;
+	font-size: 210%;
 	text-align : center;
+	margin-bottom: 2%;
 	margin-right: 0%;
-	text-transform: uppercase;
 	
 }
 
-.content h2 {
-	text-align: center;
-	color: #F2A101;
-	font-size: 150%;
-	text-align : center;
-	margin-right: 0%;
-	margin-bottom: 0%;
-	margin-top: 3%;	
-}
-
-.content h3 {
-	color: #304D90;
-	text-align: center;
-	font-style: italic;
-	font-size: 85%;
-}
-
 .content p {
-	padding-top: 1%;
-	padding-bottom: 1%;
-	font-size: 120%;
-	color: #90A0D7;
+	font-size: 110%;
+	/**color: #90A0D7;**/
+	color: #A7A8A8;
 	text-align: center;
-	margin-right: 0%;
 }
 
-.content a {
-	color: #2252A5;
-	font-style: bold;
-	font-size: 120%;
+/**.content section {
+	padding-top: 3%;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
+}**/
+
+.content section {
+margin-bottom: 4%;
 }
+
+.content section  img {
+padding-top: 4%;
+width: 49%;
+}
+
+
+
+/**.content img {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+	margin-top: 2%;
+	width: 30%;
+	height: 20%;
+}**/
 
 /** Soulignement des liens **/
-.content a:hover {
+section a:hover {
 	text-decoration: none;
 	border-bottom: 1px dashed;
 }
 
-.content strong {
+section strong {
 	color: #F2A101;
 }
 
-.content ul li {
-	color: #90A0D7;
-	text-align:center;
-	margin-bottom: 1%;
-	list-style: none outside none;
-}
 
 /** DIVERS **/ 
 
