--- a/fr v2/css/histoire.css
+++ b/fr v2/css/histoire.css
@@ -146,28 +146,27 @@ nav {
 	/**padding-top: 2%;**/
 }
 
-#menu/**, #menu ul**/ {
+nav ul {
 text-align : center;
-list-style: none;
+list-style: none outside none;
 width: 70%;
 margin: auto;
 height:100%;
-padding:0;
 }
 
-#menu li {
-display:inline-block;
-position:relative;
-width: 14%; 
+nav ul li {
+width: 14%;
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
 height: 100%;
-
+display:inline-block;
+position:relative;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
+    /**height: 45px;**/
 	padding-top: 8%;
     vertical-align: middle;
 	width: 14%;
@@ -198,70 +197,47 @@ nav li:nth-child(5) {
 }
 
 /** SOUS-MENU **/
-#menu ul li{
+
+nav li:hover > ul {
+	display: block;
+}
+
+nav ul li ul {
+	/**display:inherit;**/
+	border-radius:0;
+}
+
+nav ul li ul:last-child{
+   border-radius:0 0 8px 8px;
+}
+
+nav ul ul{
+	position:absolute;
+	/**height:5%;**/
+	width:715%;
+	overflow:hidden;
+	transition: .8s all .3s;
+	padding:0;
+	margin:0;
+	list-style:none;
+	text-align:center;
+	left: -4000px;
+}
+
+nav ul li {
+display:inline-block;
+position:relative;
+}
+
+nav ul ul li{
 display:inherit;
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-width: 100%; 
-height: 30%;
-}
-#menu ul li:hover{
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-}
-#menu ul li:last-child{
--webkit-border-radius:0 0 8px 8px;
-   -moz-border-radius:0 0 8px 8px;
-        border-radius:0 0 8px 8px;
-}
-#menu ul{
-position:absolute;
-max-height:0;
-width:100%;
-overflow:hidden;
-text-align : center;
-list-style: none;
-margin: auto;
--moz-transition: .7s all .2s;
--webkit-transition: .7s all .2s;
--o-transition: .7s all .2s;
--ms-transition: .7s all .2s;
-transition: .7s all .2s;
+border-radius:0;
 }
 
-#menu li:hover ul{
-max-height:15em;
+ul li:hover > ul {
+	max-height:15em;
+	border-radius:0;
 }
-#menu ul a{
-padding:6px 0;
-}
-#menu li:hover li a{
-color:#fff;
-text-transform:inherit;
-}
-#menu li:hover a, #menu li li:hover a{
-color:#000;
-}
-
-/** CSS pour la création de l'icône du premier fils **/
-#menu ul li:first-child a:after{
-    content: '';
-    position: absolute;
-    left: 25px;
-    top: -6px;
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 8px solid #444;
-}
-
-#menu ul li:first-child a:hover:after{
-    border-bottom-color: #04acec;
-}
-
 
 /** CONTENT HOME **/
 body {
