--- a/fr v2/css/recrutement.css
+++ b/fr v2/css/recrutement.css
@@ -130,7 +130,6 @@ padding: 0% 0% 10% 20%;
     margin-right: auto;
 	margin-top:2%;
 }
-
 /** NAVIGATION MENU **/
 nav {
 	width: 100%;
@@ -154,13 +153,11 @@ margin: auto;
 height:100%;
 }
 
-nav ul li {
+nav li {
 width: 14%;
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
 height: 100%;
-display:inline-block;
-position:relative;
 }
 
 nav li a {
@@ -186,6 +183,9 @@ nav  li:nth-child(3) {
 	background: none repeat scroll 0% 0%;
 	background-color : #43ADFE;
 }
+nav  li:nth-child(3) a {
+	text-decoration: underline;
+}
 nav  li:nth-child(4) {
 	background: none repeat scroll 0% 0%;
 	background-color : #219EFE;
@@ -196,48 +196,6 @@ nav li:nth-child(5) {
 	background-color : #0190FE;
 }
 
-/** SOUS-MENU **/
-
-nav li:hover > ul {
-	display: block;
-}
-
-nav ul li ul {
-	/**display:inherit;**/
-	border-radius:0;
-}
-
-nav ul li ul:last-child{
-   border-radius:0 0 8px 8px;
-}
-
-nav ul ul{
-	position:absolute;
-	/**height:5%;**/
-	width:715%;
-	overflow:hidden;
-	transition: .8s all .3s;
-	padding:0;
-	margin:0;
-	list-style:none;
-	text-align:center;
-	left: -4000px;
-}
-
-nav ul li {
-display:inline-block;
-position:relative;
-}
-
-nav ul ul li{
-display:inherit;
-border-radius:0;
-}
-
-ul li:hover > ul {
-	max-height:15em;
-	border-radius:0;
-}
 
 /** CONTENT HOME **/
 body {
@@ -245,60 +203,69 @@ body {
 	margin: 0 auto;
 }
 
-
 /** CONTENT **/
 .content {
 width: 100%;
-height: 190%;
+height: 90%;
 margin: auto;
-font-family: 'Helvetica Neue';
-}
-
-.content article{
-width: 100%;
-padding-top: 2%;
-}
-
-.content section {
-width: 100%;
-height: 85%;
-margin-top: 4%;
 }
 
 .content h1 {
+	font-family: 'Helvetica Neue';
 	text-align: center;
 	color: #F2A101;
-	font-size: 250%;
-	text-align : center;
+	font-size: 150%;
+	margin-bottom: 1%;
 	margin-right: 0%;
-	text-transform: uppercase;
+	padding-top: 5%;
 	
 }
 
 .content p {
 	padding-top: 1%;
-	font-size: 120%;
-	color: #90A0D7;
+	font-family: 'Helvetica Neue';
+	font-size: 125%;
+	/**color: #90A0D7;**/
+	color: #5A5A5A;
 	text-align: center;
-	margin-right: 0%;
+	margin : auto;
 }
 
+article ul li{
+	text-align: center;
+	padding-top: 2%;
+	font-size: 130%;
+	color: #90A0D7;
+}
+
+article {
+	padding-top: 2%;
+}
+
+#networking {
+	/**float: left;**/
+	position: absolute;
+	top: 60%;
+	left: 4%;
+}
+
+#comm {
+	position: absolute;
+	top: 50%;
+	left: 77%;
+}
+
+
 /** Soulignement des liens **/
-.content a:hover {
+article a:hover {
 	text-decoration: none;
 	border-bottom: 1px dashed;
 }
 
-.content strong {
+article strong {
 	color: #F2A101;
 }
 
-.content ul li {
-	color: #90A0D7;
-	text-align:center;
-	margin-bottom: 1%;
-	list-style: none outside none;
-}
 
 /** DIVERS **/ 
 
