--- a/en v2/css/histoire.css
+++ b/en v2/css/histoire.css
@@ -369,7 +369,7 @@ margin-top: 3%;
 }
 
 
-/** Placement des images cliquables **/
+/** Placement des images cliquables et comportement sur passage souris **/
 #sfiles {
 	position: absolute;
 	margin-left: 44%;
@@ -380,6 +380,20 @@ margin-top: 3%;
 	position: absolute;
 	margin-left: 10px;
 	margin-top: -12%;
+	 -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+
+#boussole:hover {
+-webkit-transform: rotate(-5deg);
+     -moz-transform: rotate(-5deg);
+       -o-transform: rotate(-5deg);
+      -ms-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+		  opacity: 0.8;
 }
 
 /** DIVERS **/ 
@@ -393,7 +407,7 @@ body, html {
 	height: 100%;
 }
 
-	.reveal-modal-bg { 
+.reveal-modal-bg { 
 		position: fixed; 
 		height: 100%;
 		width: 100%;
@@ -403,9 +417,9 @@ body, html {
 		display: none;
 		top: 0;
 		left: 0; 
-		}
+}
 	
-	.reveal-modal {
+.reveal-modal {
 		visibility: hidden;
 		top: 100px; 
 		left: 50%;
@@ -421,14 +435,14 @@ body, html {
 		-moz-box-shadow: 0 0 10px rgba(0,0,0,.4);
 		-webkit-box-shadow: 0 0 10px rgba(0,0,0,.4);
 		-box-shadow: 0 0 10px rgba(0,0,0,.4);
-		}
+}
 		
-	.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
-	.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
-	.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
-	.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
+.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
+.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
+.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
+.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
 	
-	.reveal-modal .close-reveal-modal {
+.reveal-modal .close-reveal-modal {
 		font-size: 22px;
 		line-height: .5;
 		position: absolute;
@@ -438,4 +452,4 @@ body, html {
 		text-shadow: 0 -1px 1px rbga(0,0,0,.6);
 		font-weight: bold;
 		cursor: pointer;
-		}
+}
