--- a/fr v2/css/default/header_footer.css
+++ b/fr v2/css/default/header_footer.css
@@ -1,7 +1,6 @@
 /** CSS DE MON SITE WEB **/
 /** By Emmanuel Halter **/
 
-
 /** HEADER **/ 
 header {
 	background-color: #B6E4F2 ;
@@ -18,9 +17,11 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 17rem;
-height: 2rem;
+width: 17%;
+height: 4rem;
 float: left;
+margin-left: 1%;
+background-image: url("../../images/title.png");
 }
 
 /** Header right section**/
@@ -74,7 +75,7 @@ margin-top:-2%;
 
 /** FOOTER **/
 footer {
-    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
+    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
 	background-clip: border-box;
 	background-origin: padding-box;
 	background-size: auto auto;
@@ -87,7 +88,7 @@ footer {
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 1,5rem;
+font-size: 1.5rem;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -111,6 +112,7 @@ footer section[name="about"] p {
 margin: 0% 0% 5%;
 font-family: 'PMN55',arial,verdana,sans-serif;
 text-align: center;
+font-size: 1.1rem;
 }
 
 footer section[name="about"] a {
@@ -120,25 +122,26 @@ footer section[name="about"] a {
 small {
 	font-size: 80%;
 	font-family: 'PMN55',arial,verdana,sans-serif;
+	font-size: 0.9rem;
 }
 
 /** ICON STAY CONNECTED **/
 #connect-facebook {
-background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
 height: 2rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
-background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
 height: 2rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
-background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
 height: 2rem;
 padding: 0% 0% 10% 20%;
@@ -303,61 +306,6 @@ ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
 
-/** CONTENT HOME **/
-body {
-	background : url("../images/body.png") repeat scroll 0% 0% transparent;
-	margin: 0 auto;
-}
-
-.content {
-	width: 100%;
-	height: 100%;
-	margin: auto;
-}
-
-.content img {
-width: 20%;
-display: block;
-padding-left : 41%;
-margin-bottom: 2%;
-margin-top: 3%;
-}
-
-article {
-margin-bottom: 1%;
-margin-top: 4%;
-width: 90%;
-}
-
-article h1 {
-	font-family: 'Helvetica Neue';
-	margin: auto;
-	display: block;
-	font-size: 2rem;
-	color: #284298;
-	width: 90%;
-	text-align: center;
-}
-
-article p {
-	margin-top : 2%;
-	font-family: 'Helvetica Neue';
-	float: right;
-	width: 60%;
-	font-size: 1.2rem;
-	color: #90A0D7;
-	text-align: center;
-	padding-right: 15%;
-}
-
-article a, h1 strong{
-	color: #F2A101;
-}
-
-article a:hover {
-    text-decoration: none;
-	border-bottom: 1px dashed;
-}
 
 a {
     text-decoration: none;
