--- a/fr v2/css/mobile/header_footer.css
+++ b/fr v2/css/mobile/header_footer.css
@@ -18,9 +18,11 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 17rem;
-height: 2rem;
+width: 14%;
+height: 4rem;
 float: left;
+margin-left: 0.3%;
+background-image: url("../../images/title_mobile.png");
 }
 
 /** Header right section**/
@@ -74,7 +76,7 @@ margin-top:-2%;
 
 /** FOOTER **/
 footer {
-    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
+    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
 	background-clip: border-box;
 	background-origin: padding-box;
 	background-size: auto auto;
@@ -124,21 +126,21 @@ small {
 
 /** ICON STAY CONNECTED **/
 #connect-facebook {
-background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
 height: 2rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
-background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
 height: 2rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
-background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
 height: 2rem;
 padding: 0% 0% 10% 20%;
@@ -195,8 +197,8 @@ nav  li:nth-child(1) {
 }
 
 nav  li:nth-child(2) {
-	background-color : #6DC0FE;
-	/**background-color: #FEB710;**/
+	/**background-color : #6DC0FE;**/
+	background-color: #FEB710;
 }
 
 nav  li:nth-child(3) {
@@ -301,62 +303,6 @@ background-color : #219EFE;
 /** background des sous menus au survol **/
 ul[name="menu"] li li:hover{
 background:#B6E4F2;
-}
-
-/** CONTENT HOME **/
-body {
-	background : url("../images/body.png") repeat scroll 0% 0% transparent;
-	margin: 0 auto;
-}
-
-.content {
-	width: 100%;
-	height: 100%;
-	margin: auto;
-}
-
-.content img {
-width: 20%;
-display: block;
-padding-left : 41%;
-margin-bottom: 2%;
-margin-top: 3%;
-}
-
-article {
-margin-bottom: 1%;
-margin-top: 4%;
-width: 90%;
-}
-
-article h1 {
-	font-family: 'Helvetica Neue';
-	margin: auto;
-	display: block;
-	font-size: 2rem;
-	color: #284298;
-	width: 90%;
-	text-align: center;
-}
-
-article p {
-	margin-top : 2%;
-	font-family: 'Helvetica Neue';
-	float: right;
-	width: 60%;
-	font-size: 1.2rem;
-	color: #90A0D7;
-	text-align: center;
-	padding-right: 15%;
-}
-
-article a, h1 strong{
-	color: #F2A101;
-}
-
-article a:hover {
-    text-decoration: none;
-	border-bottom: 1px dashed;
 }
 
 a {
