--- a/fr v2/css/mobile_bis/header_footer.css
+++ b/fr v2/css/mobile_bis/header_footer.css
@@ -18,9 +18,11 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 17rem;
-height: 2rem;
+width: 14%;
+height: 4rem;
 float: left;
+margin-left: 0.3%;
+background-image: url("../../images/title_mobile.png");
 }
 
 /** Header right section**/
@@ -303,61 +305,6 @@ ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
 
-/** CONTENT HOME **/
-body {
-	background : url("../images/body.png") repeat scroll 0% 0% transparent;
-	margin: 0 auto;
-}
-
-.content {
-	width: 100%;
-	height: 100%;
-	margin: auto;
-}
-
-.content img {
-width: 20%;
-display: block;
-padding-left : 41%;
-margin-bottom: 2%;
-margin-top: 3%;
-}
-
-article {
-margin-bottom: 1%;
-margin-top: 4%;
-width: 90%;
-}
-
-article h1 {
-	font-family: 'Helvetica Neue';
-	margin: auto;
-	display: block;
-	font-size: 2rem;
-	color: #284298;
-	width: 90%;
-	text-align: center;
-}
-
-article p {
-	margin-top : 2%;
-	font-family: 'Helvetica Neue';
-	float: right;
-	width: 60%;
-	font-size: 1.2rem;
-	color: #90A0D7;
-	text-align: center;
-	padding-right: 15%;
-}
-
-article a, h1 strong{
-	color: #F2A101;
-}
-
-article a:hover {
-    text-decoration: none;
-	border-bottom: 1px dashed;
-}
 
 a {
     text-decoration: none;
