--- a/fr v2/css/default/header_footer.css
+++ b/fr v2/css/default/header_footer.css
@@ -17,11 +17,13 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 17%;
-height: 4rem;
+width: 20%;
+height: 7rem;
 float: left;
 margin-left: 1%;
+margin-top: -1%;
 background-image: url("../../images/title.png");
+background-repeat: no-repeat;
 }
 
 /** Header right section**/
@@ -69,7 +71,6 @@ header div aside {
 width: 9%;
 height: 100%;
 float: right;
-/**clear:both;**/
 margin-top:-2%;
 }
 
