--- a/fr v2/css/mobile_high/contact.css
+++ b/fr v2/css/mobile_high/contact.css
@@ -18,20 +18,16 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 14%;
-height: 4rem;
+width: 20%;
+height: 2rem;
 float: left;
-margin-left: 0.3%;
-background-image: url("../../images/title_mobile.png");
-background-repeat: no-repeat;
 }
 
 /** Header right section**/
 header div {
 float : right;
-width: 31%;
-height: 4rem;
-margin-top: -3.5%;
+width: 30%;
+height:4rem;
 }
 
 header > a img {
@@ -45,10 +41,11 @@ header blockquote h1:first-letter {
 
 header blockquote{    
     text-align: justify;
+	font-style: italic;
 	font-weight: normal;
-	font-size: 0.4rem;
-	padding-top: 3%;
-	padding-right: 4%;
+	font-size: 9px;
+	padding-top: 5%;
+	padding-right:5%;
 	color: #F2A101;
 }
 
@@ -56,28 +53,27 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 0.8rem;
+font-size: 1rem;
 color: #304D90;
 }
 
 header div[name]{
-width:91%;
+width:90%;
 top: 5%;
 float: left;
 }
 
 /** Language **/
 header div aside {
-width: 13%;
-height: 100%;
+width: 9%;
 float: right;
-/**clear:both;**/
-margin-top:-25%;
+clear:both;
+margin-top:-12%;
 }
 
 /** FOOTER **/
 footer {
-    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
+    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
 	background-clip: border-box;
 	background-origin: padding-box;
 	background-size: auto auto;
@@ -90,7 +86,7 @@ footer {
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 1.2rem;
+font-size: 1,5rem;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -101,20 +97,19 @@ text-align: center;
 /** Networking **/
 footer section[name="network"] {
 float: left;
-padding-left: 5%;
+padding-left: 10%;
 }
 
 /** Useful links **/
 footer section[name="about"] {
 float: right;
-padding-right:5%;
+padding-right:10%;
 }
 
 footer section[name="about"] p {
 margin: 0% 0% 5%;
 font-family: 'PMN55',arial,verdana,sans-serif;
 text-align: center;
-font-size: 0.9rem;
 }
 
 footer section[name="about"] a {
@@ -122,30 +117,30 @@ footer section[name="about"] a {
 }
 
 small {
-	font-size: 0.8rem;
+	font-size: 80%;
 	font-family: 'PMN55',arial,verdana,sans-serif;
 }
 
 /** ICON STAY CONNECTED **/
 #connect-facebook {
-background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
-background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
-background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 .sbconnecticon {
@@ -156,7 +151,7 @@ padding: 0% 0% 16% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 55%;
+	width: 48%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -165,7 +160,7 @@ nav {
 	margin: auto;
 	right:7%;
 	margin-right: 31%;
-	padding-top: 2%;
+	padding-top: 1%;
 }
 
 nav > ul {
@@ -182,16 +177,19 @@ position:relative;
 width: 18%; 
 height: 2.8rem;
 border-radius: 9px 9px 9px 9px;
-background: none repeat scroll 0% 0%;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 15%;
+	padding-top: 8%;
+    vertical-align: middle;
 	width: 14%;
-	font-size: 1rem;
 	font-weight: bold;
+}
+
+nav li {
+	background: none repeat scroll 0% 0%
 }
 
 nav  li:nth-child(1) {
@@ -222,7 +220,7 @@ display:inherit;
    -moz-border-radius:0;
         border-radius:0;
 width: 100%;
-height: 2.5rem;
+height: 2rem;
 }
 
 ul[name="menu"] ul li:hover{
@@ -272,7 +270,7 @@ ul[name="menu"] ul a{
 padding-top: 0.8rem;
 color: #FEE92A;
 text-align: center;
-font-size: 0.6rem;
+font-size: 0.8rem;
 }
 
 ul[name="menu"] li:hover li a{
@@ -308,6 +306,138 @@ background:#B6E4F2;
 }
 
 
+/** CONTENT HOME **/
+body {
+	background : url("../images/body.png") repeat scroll 0% 0% transparent;
+	margin: 0 auto;
+}
+
+#contact{
+	padding-top: 2%;
+	margin-right: auto;
+	margin-left: auto;
+	width: 90%;
+}
+
+/** SECTION CONTACT **/
+
+.grid_contact {
+width: 90%;
+}
+
+#contact {
+margin-bottom: 3%;
+margin-top: 1%;
+}
+
+#contact h1 {
+	font-family: 'Helvetica Neue';
+	font-size: 220%;
+	text-align : center;
+	color: #F2A101;
+	font-weight:bold;
+}
+
+#contact p {
+	font-family: 'Helvetica Neue';
+	color: #90A0D7;
+	text-align: center;
+}
+
+form {
+margin: auto;
+width: 100%;
+}
+
+form input[type="text"], form textarea  {
+    width: 28%;
+	padding: 0% 0%;
+}
+
+form input[type="text"] {
+    height: 30px;
+}
+
+form textarea {
+	height: 22%;
+}
+
+#identity input[type="text"] {
+	width: 27%;
+}
+
+#identity label{
+	color: #6A7573;
+	font-family: 'Helvetica Neue';
+	font-size: 100%;
+}
+
+#input_container_left{
+	width: 49%;
+	float: left;
+	padding-bottom: 1%;
+	text-align: right;
+}
+
+#input_container_right{
+	width: 49%;
+	float: right;
+	padding-bottom: 1%;
+}
+
+form p {
+	font-family: 'Helvetica Neue';
+	color: #90A0D7;
+	font-weight: bold;
+	padding-top: 1%;
+	padding-bottom: 1%;
+	text-align: center;
+	font-size: 110%;
+}
+
+form input[type="text"], #cform textarea {
+	border: 1px solid rgb(143, 148, 154);
+	border-radius: 2% 2% 2% 2%;
+}
+
+.field_required {
+	color: #C11F29;
+	margin-left: 0%;
+}
+
+input {
+	vertical-align: middle;
+}
+
+.input_container {
+text-align:center;
+}
+
+form a {
+	color:#F2A101;
+	font-size: 100%;
+	font-family: verdana,sans-serif;
+	vertical-align: middle;
+}
+
+form button {
+	border-radius: 10% 10% 10% 10%;
+	border: 1px solid rgb(143, 148, 154);
+	background-color: #2A62AB;
+	width: 7%;
+	height: 5%;
+	cursor: pointer;
+	vertical-align: middle;
+}
+
+form button > span {
+	font-size: 150%;
+	color: #EFE237;
+	font-family: verdana,sans-serif;
+}
+
+/** DIVERS **/ 
+
 a {
     text-decoration: none;
 }
@@ -315,5 +445,4 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
-	font-size:100%;
 }
