--- a/fr v2/css/mobile_high/missions.css
+++ b/fr v2/css/mobile_high/missions.css
@@ -18,20 +18,17 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 14%;
-height: 4rem;
+width: 17rem;
+height: 2rem;
 float: left;
-margin-left: 0.3%;
-background-image: url("../../images/title_mobile.png");
-background-repeat: no-repeat;
 }
 
 /** Header right section**/
 header div {
 float : right;
-width: 31%;
+width: 30%;
 height: 4rem;
-margin-top: -3.5%;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -46,9 +43,9 @@ header blockquote h1:first-letter {
 header blockquote{    
     text-align: justify;
 	font-weight: normal;
-	font-size: 0.4rem;
+	font-size: 0.5rem;
 	padding-top: 3%;
-	padding-right: 4%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -68,16 +65,16 @@ float: left;
 
 /** Language **/
 header div aside {
-width: 13%;
+width: 9%;
 height: 100%;
 float: right;
 /**clear:both;**/
-margin-top:-25%;
+margin-top:-2%;
 }
 
 /** FOOTER **/
 footer {
-    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
+    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
 	background-clip: border-box;
 	background-origin: padding-box;
 	background-size: auto auto;
@@ -90,7 +87,7 @@ footer {
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 1.2rem;
+font-size: 1,5rem;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -101,20 +98,19 @@ text-align: center;
 /** Networking **/
 footer section[name="network"] {
 float: left;
-padding-left: 5%;
+padding-left: 10%;
 }
 
 /** Useful links **/
 footer section[name="about"] {
 float: right;
-padding-right:5%;
+padding-right:10%;
 }
 
 footer section[name="about"] p {
 margin: 0% 0% 5%;
 font-family: 'PMN55',arial,verdana,sans-serif;
 text-align: center;
-font-size: 0.9rem;
 }
 
 footer section[name="about"] a {
@@ -122,30 +118,30 @@ footer section[name="about"] a {
 }
 
 small {
-	font-size: 0.8rem;
+	font-size: 80%;
 	font-family: 'PMN55',arial,verdana,sans-serif;
 }
 
 /** ICON STAY CONNECTED **/
 #connect-facebook {
-background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
-background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
-background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 .sbconnecticon {
@@ -156,7 +152,7 @@ padding: 0% 0% 16% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 55%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -165,7 +161,7 @@ nav {
 	margin: auto;
 	right:7%;
 	margin-right: 31%;
-	padding-top: 2%;
+	padding-top: 1%;
 }
 
 nav > ul {
@@ -188,9 +184,9 @@ background: none repeat scroll 0% 0%;
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 15%;
+	padding-top: 9%;
 	width: 14%;
-	font-size: 1rem;
+	font-size: 1.1rem;
 	font-weight: bold;
 }
 
@@ -272,7 +268,7 @@ ul[name="menu"] ul a{
 padding-top: 0.8rem;
 color: #FEE92A;
 text-align: center;
-font-size: 0.6rem;
+font-size: 0.8rem;
 }
 
 ul[name="menu"] li:hover li a{
@@ -308,6 +304,98 @@ background:#B6E4F2;
 }
 
 
+/** CONTENT HOME **/
+body {
+	background : url("../images/body.png") repeat scroll 0% 0% transparent;
+	margin: 0 auto;
+}
+
+
+/** CONTENT **/
+.content {
+width: 100%;
+height: 52rem;
+padding-top: 4%;
+margin: auto;
+font-family: 'Helvetica Neue';
+}
+
+section[name="pro"], section[name="personal"]{
+	padding-bottom: 4%;
+	width: 100%;
+	height: 20rem;
+}
+
+section[name="pro"] h1, section[name="personal"] h1 {
+	text-align: center;
+	color: #F2A101;
+	font-size: 2rem;
+	margin-bottom: 1%;
+	margin-right: 0%;
+	
+}
+
+section[name="pro"] p, section[name="personal"] p {
+	padding-top: 3%;
+	font-size: 1.1rem;
+	/**color: #90A0D7;**/
+	color: #A7A8A8;
+	text-align: center;
+}
+
+section[name="pro"] a, section[name="personal"] a {
+	color: #2252A5;
+}
+
+section[name] h2 {
+	text-align: center;
+	color: #FEEA34;
+	font-size: 1.5rem;
+	text-align: center;
+	padding-top: 1%;
+	background-color: #87CBFE;
+}
+
+/** Projet **/ 
+article{
+	width: 43%;
+	height: 19rem;
+	background-color: #F4F4F4;	
+	border: 2px solid #87CBFE;
+	border-radius: 1% 1% 1% 1%;
+	list-style: none outside none;
+	position: relative;
+	margin: 1em 0px;
+	left: 28%;
+}
+
+section[name="pro"] ul li {
+	text-align: center;
+	padding-top: 1%;
+	color: #A7A8A8;
+	font-weight:bold;
+}
+
+.content img {
+	margin-bottom:2%;
+	display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+/** Soulignement des liens **/
+section a:hover {
+	text-decoration: none;
+	border-bottom: 1px dashed;
+}
+
+section strong {
+	color: #F2A101;
+}
+
+
+/** DIVERS **/ 
+
 a {
     text-decoration: none;
 }
@@ -315,5 +403,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
-	font-size:100%;
+	font-size: 100%;
 }
