--- a/fr v2/css/mobile_high/voyage.css
+++ b/fr v2/css/mobile_high/voyage.css
@@ -18,20 +18,17 @@ header {
 /** Header left section **/
 header > a {
 margin : auto;
-width: 14%;
-height: 4rem;
+width: 17rem;
+height: 2rem;
 float: left;
-margin-left: 0.3%;
-background-image: url("../../images/title_mobile.png");
-background-repeat: no-repeat;
 }
 
 /** Header right section**/
 header div {
 float : right;
-width: 31%;
+width: 30%;
 height: 4rem;
-margin-top: -3.5%;
+margin-top: -2.8%;
 }
 
 header > a img {
@@ -46,9 +43,9 @@ header blockquote h1:first-letter {
 header blockquote{    
     text-align: justify;
 	font-weight: normal;
-	font-size: 0.4rem;
+	font-size: 0.5rem;
 	padding-top: 3%;
-	padding-right: 4%;
+	padding-right: 3%;
 	color: #F2A101;
 }
 
@@ -68,16 +65,16 @@ float: left;
 
 /** Language **/
 header div aside {
-width: 13%;
+width: 9%;
 height: 100%;
 float: right;
 /**clear:both;**/
-margin-top:-25%;
+margin-top:-2%;
 }
 
 /** FOOTER **/
 footer {
-    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
+    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
 	background-clip: border-box;
 	background-origin: padding-box;
 	background-size: auto auto;
@@ -90,7 +87,7 @@ footer {
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 1.2rem;
+font-size: 1,5rem;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -101,20 +98,19 @@ text-align: center;
 /** Networking **/
 footer section[name="network"] {
 float: left;
-padding-left: 5%;
+padding-left: 10%;
 }
 
 /** Useful links **/
 footer section[name="about"] {
 float: right;
-padding-right:5%;
+padding-right:10%;
 }
 
 footer section[name="about"] p {
 margin: 0% 0% 5%;
 font-family: 'PMN55',arial,verdana,sans-serif;
 text-align: center;
-font-size: 0.9rem;
 }
 
 footer section[name="about"] a {
@@ -122,30 +118,31 @@ footer section[name="about"] a {
 }
 
 small {
-	font-size: 0.8rem;
+	font-size: 80%;
 	font-family: 'PMN55',arial,verdana,sans-serif;
 }
 
+
 /** ICON STAY CONNECTED **/
 #connect-facebook {
-background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
-background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
-background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
+background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 2.5rem;
-padding: 0% 0% 16% 20%;
+height: 2rem;
+padding: 0% 0% 10% 20%;
 }
 
 .sbconnecticon {
@@ -156,7 +153,7 @@ padding: 0% 0% 16% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 55%;
+	width: 46%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -165,7 +162,7 @@ nav {
 	margin: auto;
 	right:7%;
 	margin-right: 31%;
-	padding-top: 2%;
+	padding-top: 1%;
 }
 
 nav > ul {
@@ -188,9 +185,9 @@ background: none repeat scroll 0% 0%;
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 15%;
+	padding-top: 9%;
 	width: 14%;
-	font-size: 1rem;
+	font-size: 1.1rem;
 	font-weight: bold;
 }
 
@@ -272,7 +269,7 @@ ul[name="menu"] ul a{
 padding-top: 0.8rem;
 color: #FEE92A;
 text-align: center;
-font-size: 0.6rem;
+font-size: 0.8rem;
 }
 
 ul[name="menu"] li:hover li a{
@@ -306,7 +303,68 @@ background-color : #219EFE;
 ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
+/** CONTENT HOME **/
+body {
+	background : url("../images/body.png") repeat scroll 0% 0% transparent;
+	margin: 0 auto;
+}
 
+
+/** CONTENT **/
+.content {
+width: 100%;
+height: 91rem;
+margin: auto;
+font-family: 'Helvetica Neue';
+}
+
+.content article{
+width: 100%;
+padding-top: 2%;
+}
+
+.content section {
+width: 100%;
+height: 75.4rem;
+margin-top: 4%;
+}
+
+.content h2 {
+	color: #304D90;
+	text-align: center;
+	font-style: italic;
+	font-size: 0.85rem;
+	padding-bottom: 3%;
+}
+
+.content p, #myModal p {
+	padding-top: 1%;
+	font-size: 1.2rem;
+	color: #90A0D7;
+	text-align: center;
+}
+
+#myModal h1 {
+	text-align: center;
+	color: #F2A101;
+	font-size: 1.8rem;
+}
+
+#myModal p {
+margin-top: 3%;
+}
+
+/** Soulignement des liens **/
+.content a:hover {
+	text-decoration: none;
+	border-bottom: 1px dashed;
+}
+
+.content strong, #myModal strong {
+	color: #F2A101;
+}
+
+/** DIVERS **/ 
 
 a {
     text-decoration: none;
@@ -315,5 +373,52 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
-	font-size:100%;
+	font-size: 100%;
+}
+
+.reveal-modal-bg { 
+		position: fixed; 
+		height: 100%;
+		width: 100%;
+		background: #000;
+		background: rgba(0,0,0,.8);
+		z-index: 100;
+		display: none;
+		top: 0;
+		left: 0; 
+}
+	
+.reveal-modal {
+		visibility: hidden;
+		top: 100px; 
+		left: 50%;
+		margin-left: -300px;
+		width: 600px;
+		background: #eee url(modal-gloss.png) no-repeat -200px -80px;
+		position: absolute;
+		z-index: 101;
+		padding: 30px 40px 34px;
+		-moz-border-radius: 5px;
+		-webkit-border-radius: 5px;
+		border-radius: 5px;
+		-moz-box-shadow: 0 0 10px rgba(0,0,0,.4);
+		-webkit-box-shadow: 0 0 10px rgba(0,0,0,.4);
+		-box-shadow: 0 0 10px rgba(0,0,0,.4);
+}
+		
+.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
+.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
+.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
+.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
+	
+.reveal-modal .close-reveal-modal {
+		font-size: 22px;
+		line-height: .5;
+		position: absolute;
+		top: 8px;
+		right: 11px;
+		color: #aaa;
+		text-shadow: 0 -1px 1px rbga(0,0,0,.6);
+		font-weight: bold;
+		cursor: pointer;
 }
