--- a/fr v2/css/vhd/accueil.css
+++ b/fr v2/css/vhd/accueil.css
@@ -17,12 +17,14 @@ header {
 
 /** Header left section **/
 header > a {
-margin : auto;
-width: 11.2%;
-height: 4rem;
+margin: auto;
+width: 14%;
+height: 8rem;
 float: left;
 margin-left: 1%;
+margin-top: -0.7%;
 background-image: url("../../images/title.png");
+background-repeat: no-repeat;
 }
 
 /** Header right section**/
