--- a/fr v2/css/middle/contact.css
+++ b/fr v2/css/middle/contact.css
@@ -1,314 +1,9 @@
 /** CSS DE MON SITE WEB **/
 /** By Emmanuel Halter **/
 
-
-/** HEADER **/ 
-header {
-	background-color: #B6E4F2 ;
-	width:100%;
-	height:5rem;
-}
-
-* {
-    padding: 0%;
-    border: medium none;
-    margin: 0%;
-}
-
-/** Header left section **/
-header > a {
-margin : auto;
-width: 20%;
-height: 2rem;
-float: left;
-}
-
-/** Header right section**/
-header div {
-float : right;
-width: 30%;
-height:4rem;
-}
-
-header > a img {
-padding-left: 2%;
-}
-
-/** Quote Part **/ 
-header blockquote h1:first-letter {
-	padding-left:20px;
-}
-
-header blockquote{    
-    text-align: justify;
-	font-style: italic;
-	font-weight: normal;
-	font-size: 9px;
-	padding-top: 5%;
-	padding-right:5%;
-	color: #F2A101;
-}
-
-header div[name]  h2 {
-text-align : center;
-font-style: italic;
-font-weight: normal;
-font-size: 1rem;
-color: #304D90;
-}
-
-header div[name]{
-width:90%;
-top: 5%;
-float: left;
-}
-
-/** Language **/
-header div aside {
-width: 9%;
-float: right;
-clear:both;
-margin-top:-12%;
-}
-
-/** FOOTER **/
-footer {
-    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
-	background-clip: border-box;
-	background-origin: padding-box;
-	background-size: auto auto;
-	width: 100%;
-	height:6rem;
-	margin : auto;
-	padding: 2% 0%;
-}
-
-footer h1 {
-color: #7D8484;
-font-family: 'BebasNeue';
-font-size: 1,5rem;
-line-height: 0.5em;
-margin-bottom: 5%;
-text-transform: lowercase;
-font-variant: small-caps;
-text-align: center;
-}
-
-/** Networking **/
-footer section[name="network"] {
-float: left;
-padding-left: 10%;
-}
-
-/** Useful links **/
-footer section[name="about"] {
-float: right;
-padding-right:10%;
-}
-
-footer section[name="about"] p {
-margin: 0% 0% 5%;
-font-family: 'PMN55',arial,verdana,sans-serif;
-text-align: center;
-}
-
-footer section[name="about"] a {
-	color: #2252A5;
-}
-
-small {
-	font-size: 80%;
-	font-family: 'PMN55',arial,verdana,sans-serif;
-}
-
-/** ICON STAY CONNECTED **/
-#connect-facebook {
-background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
-width: 25%;
-height: 2rem;
-padding: 0% 0% 10% 20%;
-}
-
-#connect-linkedin {
-background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
-width: 30%;
-height: 2rem;
-padding: 0% 0% 10% 20%;
-}
-
-#connect-skype {
-background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
-width: 45%;
-height: 2rem;
-padding: 0% 0% 10% 20%;
-}
-
-.sbconnecticon {
-    margin-left: 12%;
-    margin-right: auto;
-	margin-top:2%;
-}
-
-/** NAV MENU **/
-nav {
-	width: 48%;
-	height: 2.8rem;
-	font-family: 'BebasNeue';
-	text-transform: uppercase;
-	font-size: 1.2rem;
-	letter-spacing: 1px;
-	margin: auto;
-	right:7%;
-	margin-right: 31%;
-	padding-top: 1%;
-}
-
-nav > ul {
-text-align : center;
-width: 100%;
-margin: auto;
-height: 2.8rem;
-}
-
-/** Liens menu **/
-nav li {
-display:inline-block;
-position:relative;
-width: 18%; 
-height: 2.8rem;
-border-radius: 9px 9px 9px 9px;
-}
-
-nav li a {
-    color: #FEE92A;
-    display: table-cell;
-	padding-top: 8%;
-    vertical-align: middle;
-	width: 14%;
-	font-weight: bold;
-}
-
-nav li {
-	background: none repeat scroll 0% 0%
-}
-
-nav  li:nth-child(1) {
-	background-color : #87CBFE;
-}
-
-nav  li:nth-child(2) {
-	background-color : #6DC0FE;
-	/**background-color: #FEB710;**/
-}
-
-nav  li:nth-child(3) {
-	background-color : #43ADFE;
-}
-nav  li:nth-child(4) {
-	background-color : #219EFE;
-}
-
-nav li:nth-child(5) {
-	background-color : #0190FE;
-}
-
-/** NAV SOUS-MENU **/
-
-ul[name="menu"] ul li{
-display:inherit;
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-width: 100%;
-height: 2rem;
-}
-
-ul[name="menu"] ul li:hover{
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-}
-
-/** Effet sur le contour des sous-menu **/
-ul[name="menu"] ul li:first-child {
--webkit-border-radius:9px 9px 0 0;
-   -moz-border-radius:9px 9px 0 0;
-        border-radius:9px 9px 0 0;
-	margin-top: 3%;
-}
-
-
-ul[name="menu"] ul li:last-child{
--webkit-border-radius:0 0 9px 9px;
-   -moz-border-radius:0 0 9px 9px;
-        border-radius:0 0 9px 9px;
-}
-
-ul[name="menu"] ul{
-position:absolute;
-max-height:0;
-width:100%;
-height:auto;
-overflow:hidden;
-text-align : center;
-list-style: none;
-margin:0;
-padding-top: 7%;
--moz-transition: .7s all .2s;
--webkit-transition: .7s all .2s;
--o-transition: .7s all .2s;
--ms-transition: .7s all .2s;
-transition: .7s all .2s;
-}
-
-/** Comportement au survol des sous-menus **/
-ul[name="menu"] li:hover ul{
-max-height:15em;
-}
-
-ul[name="menu"] ul a{
-padding-top: 0.8rem;
-color: #FEE92A;
-text-align: center;
-font-size: 0.8rem;
-}
-
-ul[name="menu"] li:hover li a{
-color:#FEE92A;
-text-transform:inherit;
-}
-
-ul[name="menu"] li li:hover a{
-color:#959594;
-}
-
-/** background des liens sous menus **/
-ul[name="menu"] li li {
-background: none repeat scroll 0% 0%;
-padding-bottom: 5px;
-}
-
-ul[name="menu"] li:nth-child(2) li{
-background-color : #6DC0FE;
-}
-
-ul[name="menu"] li:nth-child(3) li{
-background-color : #43ADFE;
-}
-
-ul[name="menu"] li:nth-child(4) li{
-background-color : #219EFE;
-}
-
-/** background des sous menus au survol **/
-ul[name="menu"] li li:hover{
-background:#B6E4F2;
-}
-
-
 /** CONTENT HOME **/
 body {
-	background : url("../images/body.png") repeat scroll 0% 0% transparent;
+	background : url("../../images/body.png") repeat scroll 0% 0% transparent;
 	margin: 0 auto;
 }
 
@@ -317,28 +12,21 @@ body {
 	margin-right: auto;
 	margin-left: auto;
 	width: 90%;
+	margin-bottom: 3%;
+	margin-top: 1%;
 }
 
 /** SECTION CONTACT **/
 
-.grid_contact {
-width: 90%;
-}
-
-#contact {
-margin-bottom: 3%;
-margin-top: 1%;
-}
-
-#contact h1 {
+section h1 {
 	font-family: 'Helvetica Neue';
-	font-size: 220%;
+	font-size: 2rem;
 	text-align : center;
 	color: #F2A101;
 	font-weight:bold;
 }
 
-#contact p {
+section p {
 	font-family: 'Helvetica Neue';
 	color: #90A0D7;
 	text-align: center;
@@ -355,11 +43,12 @@ form input[type="text"], form textarea  {
 }
 
 form input[type="text"] {
-    height: 30px;
+    height: 2rem;
 }
 
 form textarea {
 	height: 22%;
+	background-color: #F5F6F6;
 }
 
 #identity input[type="text"] {
@@ -369,7 +58,7 @@ form textarea {
 #identity label{
 	color: #6A7573;
 	font-family: 'Helvetica Neue';
-	font-size: 100%;
+	font-size: 1rem;
 }
 
 #input_container_left{
@@ -392,7 +81,7 @@ form p {
 	padding-top: 1%;
 	padding-bottom: 1%;
 	text-align: center;
-	font-size: 110%;
+	font-size: 1rem;
 }
 
 form input[type="text"], #cform textarea {
@@ -415,7 +104,7 @@ text-align:center;
 
 form a {
 	color:#F2A101;
-	font-size: 100%;
+	font-size: 1rem;
 	font-family: verdana,sans-serif;
 	vertical-align: middle;
 }
@@ -424,14 +113,14 @@ form button {
 	border-radius: 10% 10% 10% 10%;
 	border: 1px solid rgb(143, 148, 154);
 	background-color: #2A62AB;
-	width: 7%;
+	width: 12%;
 	height: 5%;
 	cursor: pointer;
 	vertical-align: middle;
 }
 
 form button > span {
-	font-size: 150%;
+	font-size: 1.2rem;
 	color: #EFE237;
 	font-family: verdana,sans-serif;
 }
@@ -445,4 +134,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
