--- a/fr v2/css/mobile_high/accueil.css
+++ b/fr v2/css/mobile_high/accueil.css
@@ -1,319 +1,6 @@
 /** CSS DE MON SITE WEB **/
 /** By Emmanuel Halter **/
 
-
-/** HEADER **/ 
-header {
-	background-color: #B6E4F2;
-	width:100%;
-	height:17.5rem;
-}
-
-* {
-    padding: 0%;
-    border: medium none;
-    margin: 0%;
-}
-
-/** Header left section **/
-header > a {
-display: block;
-margin: auto;
-width: 55%;
-height: 6rem;
-margin-left: 27%;
-margin-top: -3%;
-background-image: url("../../images/title.png");
-background-repeat: no-repeat;
-}
-
-/** Header right section**/
-header div {
-display: block;
-width: 100%;
-height: 4rem;
-padding-top: 5%;
-margin-top: -2.8%;
-}
-
-header > a img {
-padding-left: 2%;
-}
-
-/** Quote Part **/ 
-header blockquote h1:first-letter {
-	padding-left:20px;
-}
-
-header blockquote{    
-    text-align: center;
-	font-weight: normal;
-	font-size: 0.5rem;
-	padding-top: 3%;
-	padding-right: 3%;
-	color: #F2A101;
-}
-
-header div[name]  h2 {
-text-align : center;
-font-style: italic;
-font-weight: normal;
-font-size: 0.6rem;
-color: #304D90;
-}
-
-header div[name]{
-width:100%;
-top: 5%;
-display: block;
-}
-
-/** Language **/
-header div aside {
-/**width: 100%;**/
-height: 100%;
-display: block;
-margin: auto;
-padding-left: 45%;
-}
-
-/** FOOTER **/
-footer {
-    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
-	background-clip: border-box;
-	background-origin: padding-box;
-	background-size: auto auto;
-	width: 100%;
-	height: 22rem;
-	margin : auto;
-	padding: 2% 0%;
-}
-
-footer h1 {
-color: #7D8484;
-font-family: 'BebasNeue';
-font-size: 1,5rem;
-line-height: 0.5em;
-margin-bottom: 5%;
-text-transform: lowercase;
-font-variant: small-caps;
-text-align: center;
-}
-
-/** Networking **/
-footer section[name="network"] {
-display: block;
-margin: auto;
-margin-top: 5%;
-}
-
-/** Useful links **/
-footer section[name="about"] {
-display: block;
-margin: auto;
-margin-top: 12%;
-}
-
-footer section[name="about"] p {
-margin: 0% 0% 5%;
-font-family: 'PMN55',arial,verdana,sans-serif;
-text-align: center;
-}
-
-footer section[name="about"] a {
-	color: #2252A5;
-}
-
-small {
-	font-size: 0.8rem;
-	font-family: 'PMN55',arial,verdana,sans-serif;
-	margin: auto;
-	display: block;
-	width: 55%;
-}
-
-/** ICON STAY CONNECTED **/
-#connect-facebook {
-background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
-width: 30%;
-height: 2rem;
-padding: 0% 0% 10% 10%;
-}
-
-#connect-linkedin {
-background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
-width: 30%;
-height: 2rem;
-padding: 0% 0% 10% 10%;
-margin-left: 25%;
-}
-
-#connect-skype {
-background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
-width: 30%;
-height: 2rem;
-padding: 0% 0% 10% 10%;
-}
-
-.sbconnecticon {
-    margin-left: 12%;
-    margin-right: auto;
-	margin-top:2%;
-}
-
-/** NAV MENU **/
-nav {
-	width: 100%;
-	height: 2.8rem;
-	font-family: 'BebasNeue';
-	text-transform: uppercase;
-	font-size: 1.2rem;
-	letter-spacing: 1px;
-	margin: auto;
-	right:7%;
-	padding-top: 1%;
-	display: block;
-}
-
-nav > ul {
-text-align : center;
-width: 100%;
-margin: auto;
-height: 2.8rem;
-}
-
-/** Liens menu **/
-nav li {
-display:inline-block;
-position:relative;
-width: 18%; 
-height: 2.8rem;
-border-radius: 9px 9px 9px 9px;
-background: none repeat scroll 0% 0%;
-}
-
-nav li a {
-    color: #FEE92A;
-    display: table-cell;
-	padding-top: 13%;
-	width: 20%;
-	font-size: 1rem;
-	font-weight: bold;
-}
-
-nav  li:nth-child(1) {
-	background-color : #87CBFE;
-}
-
-nav  li:nth-child(2) {
-	background-color : #6DC0FE;
-}
-
-nav  li:nth-child(3) {
-	background-color : #43ADFE;
-}
-nav  li:nth-child(4) {
-	background-color : #219EFE;
-}
-
-nav li:nth-child(5) {
-	background-color : #0190FE;
-}
-
-/** NAV SOUS-MENU **/
-
-ul[name="menu"] ul li{
-display:inherit;
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-width: 100%;
-height: 2.5rem;
-}
-
-ul[name="menu"] ul li:hover{
--webkit-border-radius:0;
-   -moz-border-radius:0;
-        border-radius:0;
-}
-
-/** Effet sur le contour des sous-menu **/
-ul[name="menu"] ul li:first-child {
--webkit-border-radius:9px 9px 0 0;
-   -moz-border-radius:9px 9px 0 0;
-        border-radius:9px 9px 0 0;
-	margin-top: 3%;
-}
-
-
-ul[name="menu"] ul li:last-child{
--webkit-border-radius:0 0 9px 9px;
-   -moz-border-radius:0 0 9px 9px;
-        border-radius:0 0 9px 9px;
-}
-
-ul[name="menu"] ul{
-position:absolute;
-max-height:0;
-width:100%;
-height:auto;
-overflow:hidden;
-text-align : center;
-list-style: none;
-margin:0;
-padding-top: 7%;
--moz-transition: .7s all .2s;
--webkit-transition: .7s all .2s;
--o-transition: .7s all .2s;
--ms-transition: .7s all .2s;
-transition: .7s all .2s;
-}
-
-/** Comportement au survol des sous-menus **/
-ul[name="menu"] li:hover ul{
-max-height:15em;
-}
-
-ul[name="menu"] ul a{
-padding-top: 0.8rem;
-color: #FEE92A;
-text-align: center;
-font-size: 0.7rem;
-}
-
-ul[name="menu"] li:hover li a{
-color:#FEE92A;
-text-transform:inherit;
-}
-
-ul[name="menu"] li li:hover a{
-color:#959594;
-}
-
-/** background des liens sous menus **/
-ul[name="menu"] li li {
-background: none repeat scroll 0% 0%;
-padding-bottom: 5px;
-}
-
-ul[name="menu"] li:nth-child(2) li{
-background-color : #6DC0FE;
-}
-
-ul[name="menu"] li:nth-child(3) li{
-background-color : #43ADFE;
-}
-
-ul[name="menu"] li:nth-child(4) li{
-background-color : #219EFE;
-}
-
-/** background des sous menus au survol **/
-ul[name="menu"] li li:hover{
-background:#B6E4F2;
-}
-
-/** CONTENT HOME **/
 body {
 	background : url("../../images/body.png") repeat scroll 0% 0% transparent;
 	margin: 0 auto;
@@ -326,17 +13,17 @@ body {
 }
 
 .content img {
-width: 20%;
+width: 25%;
 display: block;
-padding-left : 41%;
+margin: auto;
 margin-bottom: 2%;
-margin-top: 3%;
+margin-top: 2%;
 }
 
 article {
 margin-bottom: 1%;
 margin-top: 4%;
-width: 100%;
+width: 90%;
 }
 
 article h1 {
@@ -345,16 +32,21 @@ article h1 {
 	display: block;
 	font-size: 1.4rem;
 	color: #284298;
-	margin-bottom: 10%;
+	padding-bottom: 10%;
 	text-align: center;
+	width: 90%;
 }
 
 article p {
-	margin-top : 5%;
+	margin-top: 2%;
+	padding-bottom: 2%;
 	font-family: 'Helvetica Neue';
-	font-size: 1.1rem;
+	font-size: 1rem;
 	color: #90A0D7;
 	text-align: center;
+	width: 85%;
+	display: block;
+	margin: auto;
 }
 
 article a, h1 strong{
