--- a/fr v2/css/mobile_high/header_footer.css
+++ b/fr v2/css/mobile_high/header_footer.css
@@ -4,9 +4,9 @@
 
 /** HEADER **/ 
 header {
-	background-color: #B6E4F2 ;
+	background-color: #B6E4F2;
 	width:100%;
-	height:5rem;
+	height:17.5rem;
 }
 
 * {
@@ -17,20 +17,22 @@ header {
 
 /** Header left section **/
 header > a {
-margin : auto;
-width: 14%;
-height: 4rem;
-float: left;
-margin-left: 0.3%;
-background-image: url("../../images/title_mobile.png");
+display: block;
+margin: auto;
+width: 55%;
+height: 6rem;
+margin-left: 27%;
+margin-top: -3%;
+background-image: url("../../images/title.png");
 background-repeat: no-repeat;
 }
 
 /** Header right section**/
 header div {
-float : right;
-width: 30%;
+display: block;
+width: 100%;
 height: 4rem;
+padding-top: 5%;
 margin-top: -2.8%;
 }
 
@@ -44,7 +46,7 @@ header blockquote h1:first-letter {
 }
 
 header blockquote{    
-    text-align: justify;
+    text-align: center;
 	font-weight: normal;
 	font-size: 0.5rem;
 	padding-top: 3%;
@@ -56,33 +58,33 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 0.8rem;
+font-size: 0.6rem;
 color: #304D90;
 }
 
 header div[name]{
-width:91%;
+width:100%;
 top: 5%;
-float: left;
+display: block;
 }
 
 /** Language **/
 header div aside {
-width: 9%;
+/**width: 100%;**/
 height: 100%;
-float: right;
-/**clear:both;**/
-margin-top:-2%;
+display: block;
+margin: auto;
+padding-left: 45%;
 }
 
 /** FOOTER **/
 footer {
-    background: url("../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
+    background: url("../../images/bottom.png") repeat-x scroll left top rgb(239, 239, 239);
 	background-clip: border-box;
 	background-origin: padding-box;
 	background-size: auto auto;
 	width: 100%;
-	height:6rem;
+	height: 22rem;
 	margin : auto;
 	padding: 2% 0%;
 }
@@ -100,14 +102,16 @@ text-align: center;
 
 /** Networking **/
 footer section[name="network"] {
-float: left;
-padding-left: 10%;
+display: block;
+margin: auto;
+margin-top: 5%;
 }
 
 /** Useful links **/
 footer section[name="about"] {
-float: right;
-padding-right:10%;
+display: block;
+margin: auto;
+margin-top: 12%;
 }
 
 footer section[name="about"] p {
@@ -121,30 +125,34 @@ footer section[name="about"] a {
 }
 
 small {
-	font-size: 80%;
+	font-size: 0.8rem;
 	font-family: 'PMN55',arial,verdana,sans-serif;
+	margin: auto;
+	display: block;
+	width: 55%;
 }
 
 /** ICON STAY CONNECTED **/
 #connect-facebook {
-background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
-width: 25%;
+background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
+width: 30%;
 height: 2rem;
-padding: 0% 0% 10% 20%;
+padding: 0% 0% 10% 5%;
 }
 
 #connect-linkedin {
-background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
+background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
 height: 2rem;
-padding: 0% 0% 10% 20%;
+padding: 0% 0% 10% 5%;
+margin-left: 32%;
 }
 
 #connect-skype {
-background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
-width: 45%;
+background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
+width: 30%;
 height: 2rem;
-padding: 0% 0% 10% 20%;
+padding: 0% 0% 10% 5%;
 }
 
 .sbconnecticon {
@@ -155,7 +163,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 46%;
+	width: 100%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -163,8 +171,8 @@ nav {
 	letter-spacing: 1px;
 	margin: auto;
 	right:7%;
-	margin-right: 31%;
 	padding-top: 1%;
+	display: block;
 }
 
 nav > ul {
@@ -187,9 +195,9 @@ background: none repeat scroll 0% 0%;
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 9%;
-	width: 14%;
-	font-size: 1.1rem;
+	padding-top: 13%;
+	width: 20%;
+	font-size: 1rem;
 	font-weight: bold;
 }
 
@@ -199,7 +207,6 @@ nav  li:nth-child(1) {
 
 nav  li:nth-child(2) {
 	background-color : #6DC0FE;
-	/**background-color: #FEB710;**/
 }
 
 nav  li:nth-child(3) {
@@ -271,7 +278,7 @@ ul[name="menu"] ul a{
 padding-top: 0.8rem;
 color: #FEE92A;
 text-align: center;
-font-size: 0.8rem;
+font-size: 0.7rem;
 }
 
 ul[name="menu"] li:hover li a{
@@ -305,7 +312,6 @@ background-color : #219EFE;
 ul[name="menu"] li li:hover{
 background:#B6E4F2;
 }
-
 
 a {
     text-decoration: none;
