--- a/fr v2/css/mobile_medium/header_footer.css
+++ b/fr v2/css/mobile_medium/header_footer.css
@@ -4,9 +4,9 @@
 
 /** HEADER **/ 
 header {
-	background-color: #B6E4F2 ;
+	background-color: #B6E4F2;
 	width:100%;
-	height:5rem;
+	height:17rem;
 }
 
 * {
@@ -17,19 +17,21 @@ header {
 
 /** Header left section **/
 header > a {
-margin : auto;
-width: 14%;
-height: 4rem;
-float: left;
-margin-left: 0.3%;
-background-image: url("../../images/title_mobile.png");
+display: block;
+margin: auto;
+width: 60%;
+height: 6rem;
+margin-top: -3%;
+background-image: url("../../images/title.png");
+background-repeat: no-repeat;
 }
 
 /** Header right section**/
 header div {
-float : right;
-width: 30%;
+display: block;
+width: 100%;
 height: 4rem;
+padding-top: 5%;
 margin-top: -2.8%;
 }
 
@@ -43,7 +45,7 @@ header blockquote h1:first-letter {
 }
 
 header blockquote{    
-    text-align: justify;
+    text-align: center;
 	font-weight: normal;
 	font-size: 0.5rem;
 	padding-top: 3%;
@@ -55,23 +57,22 @@ header div[name]  h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 0.8rem;
+font-size: 0.6rem;
 color: #304D90;
 }
 
 header div[name]{
-width:91%;
+width:100%;
 top: 5%;
-float: left;
+display: block;
 }
 
 /** Language **/
 header div aside {
-width: 9%;
 height: 100%;
-float: right;
-/**clear:both;**/
-margin-top:-2%;
+display: block;
+margin: auto;
+padding-left: 40%;
 }
 
 /** FOOTER **/
@@ -81,7 +82,7 @@ footer {
 	background-origin: padding-box;
 	background-size: auto auto;
 	width: 100%;
-	height:6rem;
+	height: 16rem;
 	margin : auto;
 	padding: 2% 0%;
 }
@@ -99,14 +100,16 @@ text-align: center;
 
 /** Networking **/
 footer section[name="network"] {
-float: left;
-padding-left: 10%;
+display: block;
+margin: auto;
+margin-top: 5%;
 }
 
 /** Useful links **/
 footer section[name="about"] {
-float: right;
-padding-right:10%;
+display: block;
+margin: auto;
+margin-top: 12%;
 }
 
 footer section[name="about"] p {
@@ -120,30 +123,34 @@ footer section[name="about"] a {
 }
 
 small {
-	font-size: 80%;
+	font-size: 0.8rem;
 	font-family: 'PMN55',arial,verdana,sans-serif;
+	display: block;
+	margin: auto;
+	width: 60%;
 }
 
 /** ICON STAY CONNECTED **/
 #connect-facebook {
 background : url("../../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
-width: 25%;
+width: 30%;
 height: 2rem;
-padding: 0% 0% 10% 20%;
+padding: 0% 0% 10% 10%;
 }
 
 #connect-linkedin {
 background : url("../../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
 height: 2rem;
-padding: 0% 0% 10% 20%;
+padding: 0% 0% 10% 10%;
+margin-left: 25%;
 }
 
 #connect-skype {
 background : url("../../icon/skype.png") no-repeat scroll -8px -5px transparent;
-width: 45%;
+width: 30%;
 height: 2rem;
-padding: 0% 0% 10% 20%;
+padding: 0% 0% 10% 10%;
 }
 
 .sbconnecticon {
@@ -154,7 +161,7 @@ padding: 0% 0% 10% 20%;
 
 /** NAV MENU **/
 nav {
-	width: 46%;
+	width: 100%;
 	height: 2.8rem;
 	font-family: 'BebasNeue';
 	text-transform: uppercase;
@@ -162,8 +169,8 @@ nav {
 	letter-spacing: 1px;
 	margin: auto;
 	right:7%;
-	margin-right: 31%;
 	padding-top: 1%;
+	display: block;
 }
 
 nav > ul {
@@ -186,9 +193,9 @@ background: none repeat scroll 0% 0%;
 nav li a {
     color: #FEE92A;
     display: table-cell;
-	padding-top: 9%;
-	width: 14%;
-	font-size: 1.1rem;
+	padding-top: 20%;
+	width: 20%;
+	font-size: 0.8rem;
 	font-weight: bold;
 }
 
@@ -197,8 +204,7 @@ nav  li:nth-child(1) {
 }
 
 nav  li:nth-child(2) {
-	/**background-color : #6DC0FE;**/
-	background-color: #FEB710;
+	background-color : #6DC0FE;
 }
 
 nav  li:nth-child(3) {
@@ -270,7 +276,7 @@ ul[name="menu"] ul a{
 padding-top: 0.8rem;
 color: #FEE92A;
 text-align: center;
-font-size: 0.8rem;
+font-size: 0.5rem;
 }
 
 ul[name="menu"] li:hover li a{
